[tool.poetry]
name = "flammingo"
version = "0.0.1"
description = "Flamingo"
authors = ["Joao Daher <joao@daher.dev>"]
packages = [
    { include = "flamingo" },
]

[tool.poetry.dependencies]
python = "^3.9"
sanic = "*"
firebase-admin = "*"
gitpython = "*"
sanic-openapi = "*"
google-api-python-client = "*"
google-cloud-storage = "*"
google-cloud-build = "*"
pylint = { version = "*", optional = true}
coverage = { version = "*", optional = true}

[tool.poetry.extras]
dev-kit = ["pylint", "coverage"]

[tool.poetry.dev-dependencies]
pylint = "*"
coverage = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
