[tool.poetry]
name = "flamingo"
version = "0.0.1"
description = "Flamingo"
authors = ["Joao Daher <joao@daher.dev>"]
packages = [
    { include = "flamingo" },
]

[tool.poetry.dependencies]
python = "~3.9"
sanic-rest = "*"
gcp-pilot = { version = "*", extras = ['datastore', 'build', 'storage', 'pubsub', 'dns']}
python-slugify = "*"
PyGithub = "*"
pylint = { version = "*", optional = true}
coverage = { version = "*", optional = true}

[tool.poetry.extras]
dev-kit = ["pylint", "coverage"]

[tool.poetry.dev-dependencies]
pylint = "*"
coverage = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
